--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-calendar": "^4.6.0",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
