--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-calendar": "^4.6.0",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
